--- a/BmsWpf/Views/Forms/LoginForm.xaml
+++ b/BmsWpf/Views/Forms/LoginForm.xaml
@@ -40,7 +40,8 @@
             <Button x:Name="loginBtn" 
                     Content="Login" 
                     Margin="194,204,40,59" 
-                    Background="DarkRed" 
+                    Background="#FF972B2B" 
+                    HorizontalContentAlignment="Center"
                     Foreground="White" 
                     FontSize="18" 
                     Height="40"
