--- a/BmsWpf/Views/ActiveProjectForms/NotesView.xaml
+++ b/BmsWpf/Views/ActiveProjectForms/NotesView.xaml
@@ -3,22 +3,37 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BmsWpf.Views.ActiveProjectForms"
+        xmlns:viewModels="clr-namespace:BmsWpf.ViewModels"
+        xmlns:intr="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         mc:Ignorable="d"
         Height="848.451" Width="751.337">
+    <UserControl.DataContext>
+        <viewModels:PFNotesViewModel/>
+    </UserControl.DataContext>
+    <intr:Interaction.Triggers>
+        <intr:EventTrigger EventName="Loaded">
+            <intr:InvokeCommandAction Command="{Binding WindowLoaded}"/>
+        </intr:EventTrigger>
+    </intr:Interaction.Triggers>
     <Grid Height="850" Width="750" Background="#FF2E3137">
 
-        <DataGrid HorizontalAlignment="Left" Height="733" VerticalAlignment="Top" Width="510" Margin="157,24,0,0">
-            <GridView>
-                <GridViewColumn Header="Note" Width="205" DisplayMemberBinding="{Binding Desciption}"></GridViewColumn>
-                <GridViewColumn Header="Type" Width="205" DisplayMemberBinding="{Binding Type}"></GridViewColumn>
-            </GridView>
+        <DataGrid HorizontalAlignment="Left" 
+                  Height="733" 
+                  VerticalAlignment="Top" 
+                  Width="510" 
+                  Margin="157,24,0,0" 
+                  CanUserAddRows="False"
+                  ItemsSource="{Binding Notes}" 
+                  SelectedItem="{Binding SelectedNote}">
+            <intr:Interaction.Triggers>
+                <intr:EventTrigger EventName="MouseDoubleClick">
+                    <intr:InvokeCommandAction Command="{Binding DoubleClick}" />
+                </intr:EventTrigger>
+            </intr:Interaction.Triggers>
         </DataGrid>
 
-
-        <Button Name ="AddNewNoteButton" Content="Add new note" HorizontalAlignment="Left" Margin="32,24,0,0" VerticalAlignment="Top" Width="100" Height="30"/>
-        <Button Name="EditNotesButton" Content="Edit note" HorizontalAlignment="Left" Margin="32,59,0,0" VerticalAlignment="Top" Width="100" Height="30"/>
-        <Button Name="DeleteNoteButton" Content="Delete note" HorizontalAlignment="Left" Margin="32,94,0,0" VerticalAlignment="Top" Width="100" Height="30"/>
-
+        <Button Name ="AddNewNoteButton" Content="Add new note" HorizontalAlignment="Left" Margin="32,24,0,0" VerticalAlignment="Top" Width="100" Height="30" Command="{Binding AddNewNote}"/>
+        <Button Name="EditNotesButton" Content="Edit note" HorizontalAlignment="Left" Margin="32,59,0,0" VerticalAlignment="Top" Width="100" Height="30" Command="{Binding EditNote}"/>
+        <Button Name="DeleteNoteButton" Content="Delete note" HorizontalAlignment="Left" Margin="32,94,0,0" VerticalAlignment="Top" Width="100" Height="30" Command="{Binding Delete}"/>
     </Grid>
 </UserControl>
